syntax = "proto3";

option csharp_namespace = "ProtobufCRUDServer";

package person;

service PersonHandler {
    rpc CreatePerson(CreatePersonRequest) returns (CreatePersonResponse) {}
    rpc GetPerson(GetPersonRequest) returns (GetPersonResponse) {}
    rpc GetAllPerson(GetAllPersonRequest) returns (GetAllPersonResponse) {}
    rpc UpdatePerson(UpdatePersonRequest) returns (UpdatePersonResponse) {}
    rpc DeletePerson(DeletePersonRequest) returns (DeletePersonResponse) {}
}

message CreatePersonRequest {
    string first_name = 1;
    string last_name = 2;
    string national_code = 3;
    string birthday = 4; 
}

message CreatePersonResponse {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string national_code = 4;
    string birthday = 5; 
}

message GetPersonRequest {
    int32 id = 1;
}

message GetPersonResponse {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string national_code = 4;
    string birthday = 5; 
}

message GetAllPersonRequest {
    int32 page = 1;
    int32 page_size = 2;
    string search_term = 3;
}

message GetAllPersonResponse {
    repeated GetPersonResponse people = 1;
}

message UpdatePersonRequest {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string national_code = 4;
    string birthday = 5; 
}

message UpdatePersonResponse {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string national_code = 4;
    string birthday = 5; 
}

message DeletePersonRequest {
    int32 id = 1;
}

message DeletePersonResponse {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string national_code = 4;
    string birthday = 5; 
}
